src/objects/CustomUser__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User role</description>
        <label>CustomRole</label>
        <referenceTo>CustomRole__c</referenceTo>
        <relationshipLabel>CustomUsers</relationshipLabel>
        <relationshipName>CustomUsers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Session_Time__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Session Time</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>CustomUser</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>U-{00000}</displayFormat>
        <label>User Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CustomUsers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>